--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,4 +32,11 @@
   "exclude": [
     "node_modules"
   ]
+}{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
+  }
 }
